[package]
name = "zinc"
version = "0.1.0"
edition = "2021"

[lib]
name = "zinc"

[[bin]]
name = "zinc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
# Speed up incremental dev builds without having to disable the debug setting
split-debuginfo = "unpacked"
