[package]
name = "zinc"
version = "0.1.0"
edition = "2021"

[lib]
name = "zinc"

[[bin]]
name = "zinc"
path = "src/bin/main.rs"

[dependencies]
bytes = "1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.dev]
# Speed up incremental dev builds without having to disable the debug setting
split-debuginfo = "unpacked"
