[package]
name = "zinc"
version = "0.1.0"
edition = "2021"
description = "Lightweight key-value database."
repository = "https://github.com/dark-fusion/silk"
license = "MIT"
keywords = ["database", "key-value-store", "concurrent"]
default-run = "zinc"

[lib]
name = "zinc"

[[bin]]
name = "zinc"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
parking_lot = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = "1"
serde_json = "1"

[profile.dev]
# Speed up incremental dev builds without having to disable the debug setting
split-debuginfo = "unpacked"

[features]
pretty-logging = ["tracing-subscriber/ansi"]
